# tests

./: README.md
seecer/repo_ver/SEECER/: Makefile  Makefile.in  README  config.h  config.h.in  config.status  configure  configure.ac  run_seecer_installer.sh  seecer_installer.sh
seecer/repo_ver/SEECER/autom4te.cache/: output.0  requests  traces.1
seecer/repo_ver/SEECER/ext/jellyfish/: Makefile  Makefile.in  aclocal.m4  config.h  config.status  configure  libtool
seecer/repo_ver/SEECER/ext/yaggo/: yaggo
seecer/repo_ver/SEECER/pipeline/: replace_ids.cc
seecer/repo_ver/SEECER/pipeline/.deps/: replace_ids.Po
seecer/repo_ver/SEECER/testdata/: SRR027877-small-p2.fastq_N_RESP
seecer/repo_ver/SEECER/tmp1/: counts_17_3  counts_17_3_RESP
seecer/web_ver/SEECER-0.1.3/SEECER/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure
seecer/web_ver/SEECER-0.1.3/SEECER/autom4te.cache/: output.0  output.1  traces.0  traces.1
seecer/web_ver/SEECER-0.1.3/SEECER/pipeline/: replace_ids.cc
seecer/web_ver/SEECER-0.1.3/SEECER/pipeline/.deps/: random_sub_N.Po  replace_ids.Po
seecer/web_ver/SEECER-0.1.3/SEECER/src/: seecer_main.cpp  seecer_main.cpp~
seecer/web_ver/SEECER-0.1.3/SEECER/src/.deps/: common.Po  hashmap_read_finder.Po  hmm_cluster.Po  seecer_main.Po  smart_hashmap_read_finder.Po  stats_keeper.Po
seecer/web_ver/SEECER-0.1.3/SEECER/testdata/: SRR027877-small-p2.fastq_N
seecer/web_ver/SEECER-0.1.3/SEECER/tmp1/: counts_17_3
seecer/web_ver/SEECER-0.1.3/jellyfish-1.1.11/: Makefile  config.status  jellyfish-1.1.pc  libtool
(+75 files in other folders)
